--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,19 @@
 {
+    "name": "jigsawye/NutcCoursesCrawler",
+    "authors": [
+        {
+            "name": "jigsawye",
+            "email": "jigsaw.ye@gmail.com"
+        }
+    ],
     "require": {
         "fabpot/goutte": "^3.1"
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "NutcCoursesCrawler\\": "src/NutcCoursesCrawler/"
+        }
+    },
+    "license": "MIT",
+    "version": "0.1.0"
 }
